# PsychoBot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
db/: driver.py  models.py  queries.py  using.py
db/sql_scripts/: db_delete.sql  db_init.sql  db_insert.sql  db_select.sql  db_update.sql
handlers/: __init__.py  agreement.py  profile.py  session_view.py  start.py
handlers/admin/: __init__.py  services.py  sessions.py  timetable.py
handlers/recording/: __init__.py  choice.py  primary.py  prosessing.py  secondary.py
templates/: admin.py  agreements.py  messages.py  profile.py  recording.py  session.py
utils/: __init__.py  callback_factories.py  keyboards.py  states.py
utils/filters/: UsersFilter.py  __init__.py
utils/keyboards/: for_commands.py  for_records.py  for_sessions.py
utils/keyboards/admin/: for_services.py  for_sessions.py  for_timetable.py
utils/scheduling/: __init__.py  job_builders.py  schedule_middlewares.py
